@@ -1,3 +1,7 @@
+2005-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* tst-stackguard1.c (do_test): Likewise.
+
 2005-07-29  Jakub Jelinek  <jakub@redhat.com>
 
 	* tst-stackguard1.c (do_test): Don't fail if the poor man's
